--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,7 +15,7 @@
     
     <body>
         <p>Click on a planet to learn more!</p>
-            <a hred="/index"> HOME </a> <br>
+            <a href="/index"> HOME </a> <br>
             <a href="/mercury"> Mercury</a><br>
             <a href="/venus"> Venus</a><br>
                         <br/><br/>
