--- a/views/venus.ejs
+++ b/views/venus.ejs
@@ -1,8 +1,8 @@
 <% include partials/head.ejs %>
 
- <h1> Welcome to Mercury page!</h1>
+ <h1> Welcome to Venus page!</h1>
             <br/><br/>
-        <img src="/img/spectra_mercury.png" alt="mercury" />
+        <img src="/img/venus.png" alt="mercury" />
             
         
    
