--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,9 @@
 <footer>
         
         <div class="footer" > The Solar System 2019 &copy; </div>
-
+        <p> Kyle Dilbeck CST336 Internet Programming</p>
+        <img src="/img/csumb.png"/>
+        
 
 
 
