--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <% include partials/head.ejs %>
-        <h1> Welcome to the Solar System </h1>
+        <h1> Welcome to the Solar System Home Page </h1>
         <img src="/img/solarS.png" />
             
         
