--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
         
         <div class="footer" > The Solar System 2019 &copy; </div>
         <p> Kyle Dilbeck CST336 Internet Programming</p>
-        <img src="/img/csumb.png"/>
+        <img src="/img/csumb.png" alt="csumb" />
         
 
 
