--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,7 +15,16 @@
     
     <body>
         <p>Click on a planet to learn more!</p>
-            <a href="/index"> HOME </a> <br>
+        <nav>
+            <a href="/index">   HOME   </a><br>
             <a href="/mercury"> Mercury</a><br>
-            <a href="/venus"> Venus</a><br>
+            <a href="/jupiter">   Jupiter  </a><br>
+            <a href="/mars">   Mars  </a><br>
+            <a href="/saturn">   Saturn  </a><br>
+            <a href="/venus">   Venus  </a><br>
+            
+        </nav>
+        
+        <!--<h6 id="nina"> NINAAAAAAAA</h6>-->
+            
                         <br/><br/>
