--- a/views/venus.ejs
+++ b/views/venus.ejs
@@ -4,6 +4,20 @@
             <br/><br/>
         <img src="/img/venus.png" alt="mercury" />
             
+        <ul class="move">
+         <li>Venus is the second brightest natural object in the sky.</li>
+         <li>Venus is sometimes referred to as the “morning star” and “evening star"</li>
+         <li>Venus is named after the Roman goddess of love and beauty</li>
+         <li>Venus is sometimes called Earth's sister planet</li>
+         <li>One day on Venus is longer than one year on Earth</li>
+        </ul>
         
+        <p class="move2">Venus’ atmosphere can be divided into two broad layers. The first is the cloud bank that effectively encases the entire planet. The second is everything below these clouds.
+
+The clouds surrounding Venus extend from 50 to 80 kilometers above the planet’s surface and are composed primarily of sulphur dioxide (SO2) and sulphuric acid (H2SO4). These clouds are so dense that they reflect 60% of the sunlight Venus receives back into space.
+
+When studying the sub-cloud atmosphere two features are immediately prominent: density and composition. Furthermore, the effect these two features produce on the planet is profound, making Venus the hottest and least hospitable of any planet in the Solar System.
+
+Firstly, with an atmospheric density of approximately 480° C. This easily makes Venus’ surface the hottest of any planet’s in the solar system.</p>
    
 <% include partials/footer.ejs %>
