--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -16,7 +16,7 @@
     <body>
         <p>Click on a planet to learn more!</p>
         <nav>
-            <a href="/index">   HOME   </a><br>
+            <a href="/">   HOME   </a><br>
             <a href="/mercury"> Mercury</a><br>
             <a href="/jupiter">   Jupiter  </a><br>
             <a href="/mars">   Mars  </a><br>
