--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -1,12 +1,11 @@
 
-<br/><br>
 <footer>
         <nav class="centerText">
                 <a href="/">   HOME   </a>
         </nav>
         <img class="centerIMG" src="/img/csumb.png" alt="csumb" />
         <!--<div class="footer" > -->
-        <h4 class="centerText">Kyle Dilbeck's Personal Portfolio and Resume CSUMB Software Engineering 2019 &copy;</h4>
+        <h4 class="centerText">Kyle Dilbeck CSUMB 2019 &copy;</h4>
         <!--</div>-->
         
         
