--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,11 @@
 <% include partials/head.ejs %>
-        <h1> Welcome to the Solar System Home Page </h1>
-        <img src="/img/solarS.png" />
+        <h1 class="centerText"> Welcome to Kyle's Home page </h1>
+        
+        
+        <h3 class="centerText">Info:</h3>
+        <p></p>
+        
+        <img class="centerIMG" src="/img/img.png" width="300" alt="coors brewry Denver, CO"/>
             
         
 <% include partials/footer.ejs %>
