--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Kyle Dilbeck Lab 6 Solar System</title>
+        <title>Kyle Dilbeck Personal Web Page</title>
      
       <meta charset="utf-8">
       <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -11,20 +11,22 @@
     
       <link href="css/styles.css" rel="stylesheet" type="text/css" />
       <!--<script SRC='js/functions.js'></script>   -->
+      
     </head>
     
     <body>
-        <p>Click on a planet to learn more!</p>
-        <nav>
-            <a href="/">   HOME   </a><br>
-            <a href="/mercury"> Mercury</a><br>
-            <a href="/jupiter">   Jupiter  </a><br>
-            <a href="/mars">   Mars  </a><br>
-            <a href="/saturn">   Saturn  </a><br>
-            <a href="/venus">   Venus  </a><br>
+        <h5 class="centerText"> Navigation Tabs :: Click on a tab to learn more</h5>
+        <nav background="img/img.png" width="400">
+            <a href="/">   HOME   </a>
+            <a href="/experience"> Programming Experience</a>
+            <a href="/contact"> Contact & Networking  </a>
+            <a href="/resume"> Resume </a>
+            <a href="/me"> About Me </a>
+            <a href="/education"> Education </a>
             
         </nav>
+        <marquee><h4>Welcome to Kyle's Website, Please click on any of the links above to learn more! Created during CSUMB CS progam 2019 __________________ Thank you for visiting! ___________________ See Networking Links for Contact Info!______  </h4></marquee>
         
-        <!--<h6 id="nina"> NINAAAAAAAA</h6>-->
+        
             
                         <br/><br/>
