--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -1,15 +1,14 @@
 <% include partials/head.ejs %>
 
-        <h1> Welcome to Mercury page!</h1>
+        <h1>Resume - Kyle Xyian Dilbeck</h1>
             <br/><br/>
-        <img src="/img/spectra_mercury.png" alt="mercury" />
-        <ul class="move">
-            <li>Mercury does not have any moons or rings</li>
-            <li>Mercury is the smallest planet</li>
-            <li>Mercury is the closest planet to the Sun</li>
-            <li>Your weight on Mercury would be 38% of your weight on Earth</li>
-            <li>A day on the surface of Mercury lasts 176 Earth days</li>
-            <li>A year on Mercury takes 88 Earth days</li>
+        <img class="centerIMG" src="/img/mars.png" alt="mars" width="200"/>
+        <ul class="centerText">
+            <p>Short description will go here..</p>
+           <h4>Drone Pilot - D&D management</h4> 
+           <li>Designed and executed flight programs with DJI drone technology and autocad. </li>
+           <li>Compiled data for 3D modeling and site maping.</li>
+           <li>Provided live video project updates</li>
         </ul>
         
         <p class="move2">It is difficult to reach the planet due to its proximity to the Sun and any spacecraft visiting would need to travel 91 million kilometers into the Sun’s gravitational potential well. The Mariner 10 visited during 1974-75, flying by Mercury three times and mapping half its surface. On March 24, 1975 it ran out of fuel and is still believed to be orbiting the Sun. The MESSENGER probe was launched in 2004 to explore Mercury’s high density, its geological history, the nature of its magnetic field and more. Another mission, BepiColombo, is to be launched in 2015 by the European Space Agency and Japan is expected to reach Mercury in 2019.</p>
