--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include partials/head.ejs %>
         <h1 class="centerText"> Welcome to Kyle's Home page </h1>
-        
+        <p>cite is currently<strong>under construction</strong> </p>
         
         <h3 class="centerText">Info:</h3>
         <p></p>
