--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,7 +8,7 @@
         <!--<div class="footer" > -->
         <h4 class="centerText">Kyle Dilbeck's Personal Portfolio and Resume CSUMB Software Engineering 2019 &copy;</h4>
         <!--</div>-->
-        
+        <% include partials/clock.ejs %>
         
 </footer>
 
