--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,29 @@
 <% include partials/head.ejs %>
         <h1 class="centerText"> Welcome to Kyle's Home page </h1>
-        <p>cite is currently<strong>under construction</strong> </p>
+        
+        <p class="centerText">cite is currently<strong>under construction</strong> </p>
         
         <h3 class="centerText">Info:</h3>
         <p></p>
         
         <img class="centerIMG" src="/img/img.png" width="300" alt="coors brewry Denver, CO"/>
-            
         
-<% include partials/footer.ejs %>
+        
+        
+           <h3> Website, front & back Info: </h3>
+                    <ul id="fill1" style="list-style-type:circle;">
+                <h3 class"centerText">Languages</h3>
+                    <li>HTML 5</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>BootStap</li>
+                    <li>node.js</li>
+                
+                    
+                
+                <h3 class"centerText">Dependencies</h3>
+                    <li>Express</li>
+                    <li>Nodemon</li>
+                    <li>ejs</li>
+        
+<% include partials/footer.ejs %> 
