--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,7 +8,7 @@
         <!--<div class="footer" > -->
         <h4 class="centerText">Kyle Dilbeck's Personal Portfolio and Resume CSUMB Software Engineering 2019 &copy;</h4>
         <!--</div>-->
-        <% include partials/clock.ejs %>
+        <iframe class="centerIMG" src="https://freesecure.timeanddate.com/clock/i6wwd5r2/n3691/fn2/fcfff/tct/pct/ftb/bas4/pa2/tt0/tw1/th2/tb4" frameborder="0" width="207" height="52" allowTransparency="true"></iframe>
         
 </footer>
 
