--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -11,8 +11,12 @@
             <h4>GIT_hub:</h4>
             <li></li><a href="https://github.com/XYIAN?tab=repositories">Click for GIT repo</a><br>
             <h4>Fill:</h4>            
-            <li><a href="http://www.google.com">Click for Fill</a><br></li><br>      
+            <li><a href="http://www.google.com">Click for Fill</a><br></li><br>   
+            
         </ul>
+        
+        <h1 id="blogpost1"></h1>
+        <h1 id="blogpost"></h1>
         
         <p class="move2">  </p>
 
